--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 	"dependencies": {
 		"@emotion/react": "^11.10.5",
 		"@emotion/styled": "^11.10.5",
-		"@mui/material": "^5.10.12",
+		"@mui/icons-material": "^5.10.9",
+		"@mui/material": "^5.10.13",
 		"@types/node": "18.11.9",
 		"@types/react": "18.0.25",
 		"@types/react-dom": "18.0.8",
@@ -37,6 +38,7 @@
 		"husky": "^8.0.0",
 		"lint-staged": "^13.0.3",
 		"prettier": "2.7.1",
+		"sass": "^1.56.0",
 		"typescript": "^4.8.4"
 	}
 }
