--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
 		"eslint-config-next": "13.0.2",
 		"next": "13.0.2",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"react-leaflet": "^4.1.0",
+		"typewriter-effect": "^2.19.0"
 	},
 	"devDependencies": {
+		"@types/leaflet": "^1.9.0",
 		"@typescript-eslint/eslint-plugin": "^5.42.0",
 		"eslint": "^8.27.0",
 		"eslint-config-prettier": "^8.5.0",
