--- a/package.json
+++ b/package.json
@@ -18,14 +18,21 @@
 		"@emotion/styled": "^11.10.5",
 		"@mui/icons-material": "^5.10.9",
 		"@mui/material": "^5.10.13",
+		"@reduxjs/toolkit": "^1.9.0",
+		"@types/axios": "^0.14.0",
 		"@types/node": "18.11.9",
 		"@types/react": "18.0.25",
 		"@types/react-dom": "18.0.8",
+		"axios": "^1.1.3",
+		"dotenv": "^16.0.3",
 		"eslint-config-next": "13.0.2",
 		"next": "13.0.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-leaflet": "^4.1.0",
+		"react-loader-spinner": "^5.3.4",
+		"react-redux": "^8.0.5",
+		"react-toastify": "^9.1.1",
 		"typewriter-effect": "^2.19.0"
 	},
 	"devDependencies": {
