--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"next": "13.0.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "^7.39.4",
 		"react-leaflet": "^4.1.0",
 		"react-loader-spinner": "^5.3.4",
 		"react-redux": "^8.0.5",
