--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
 		"axios": "^1.1.3",
 		"dotenv": "^16.0.3",
 		"eslint-config-next": "13.0.2",
+		"framer-motion": "^7.6.7",
+		"install": "^0.13.0",
 		"next": "13.0.2",
+		"npm": "^9.1.2",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.39.4",
